# ltipassparams

./: .gitignore  README.md  pyproject.toml  setup.py
config/jupyterhub_config.d/: ltipassparams_grading.py  ltipassparams_spawner.py
grading-service/: grading-service.py
jupyter-config/jupyter_notebook_config.d/: ltipassparams.json
ltipassparams/: __init__.py  auth.py  grading_service.py  hubside.py  monkey.py  nbgitpuller_helper.py  storage.py  userextension.py  utils.py
ltipassparams/grading/: service.py
patch/: enable_auth_state_bugfix.patch
templates/: notebook.html  tree.html
test/: test_monkey.py  test_nbgitpuller_helper.py  test_storage.py
