[tool.poetry]
name = "ltipassparams"
version = "0.1.0"
description = ""
authors = ["Jason Mansour"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterhub-ltiauthenticator = "^1.3.0"
lti = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
